--- a/index.html
+++ b/index.html
@@ -2,25 +2,36 @@
   <html lang="ko" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dongle&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/default.css">
+    <link rel="stylesheet" href="./css/main.css"
 
   </head>
   <body>
-  <div class="container">
+    <div class="container">
 
-    <section id="main">
-      <h3>산리오 캐릭터로 알아보는 짝사랑 유형</h3>
-      <img src="./img/main.png" alt="mainImage">
-      <p>
-        쿠로미쿠로미쿠로미쿠로미
-      </p>
-      <button type="button" class="btn btn-outline-dark">드루와~!>_<</button>
-    </section>
-    <section id="qna">
+      <section id="main" class="mx-auto mt-5 mb-5 pt-5 pb-5 px-2">
+        <h1 class="pt-5">산리오 캐릭터로 알아보는 짝사랑 유형</h1>
+        <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
 
-    </section>
-  </div>
+          <img src="./img/main.png" alt="mainImage" class="img-fluid">
+        </div>
+
+        <p>
+        나는 짝사랑할 때 어떤 산리오 캐릭터일까?<br>
+        알고 싶다면 아래 버튼 클릭클릭~~
+        </p>
+        <button type="button" class="btn btn-outline-dark mt-3">드루와~!>_<</button>
+      </section>
+      <section id="qna">
+
+      </section>
+    </div>
   </body>
 
-  </html>
+</html>
