질문 만들어떠염

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dongle&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/default.css">
-    <link rel="stylesheet" href="./css/main.css"
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/qna.css">
+    <link rel="stylesheet" href="./css/animation.css">
 
   </head>
   <body>
@@ -26,11 +28,13 @@
         나는 짝사랑할 때 어떤 산리오 캐릭터일까?<br>
         알고 싶다면 아래 버튼 클릭클릭~~
         </p>
-        <button type="button" class="btn btn-outline-dark mt-3">드루와~!>_<</button>
+        <button type="button" class="btn btn-outline-dark mt-3" onclick="js:begin()" >드루와~!>_<</button>
       </section>
       <section id="qna">
+        <p>test!</p>
 
       </section>
+      <script src="./js/start.js" charset="utf-8"></script>
     </div>
   </body>
 
