생각보다 어려버

--- a/index.html
+++ b/index.html
@@ -28,12 +28,17 @@
         나는 짝사랑할 때 어떤 산리오 캐릭터일까?<br>
         알고 싶다면 아래 버튼 클릭클릭~~
         </p>
-        <button type="button" class="btn btn-outline-dark mt-3" onclick="js:begin()" >드루와~!>_<</button>
+        <button type="button" class="btn btn-outline-dark mt-3"
+        onclick="js:begin()" >드루와~!>_<</button>
       </section>
       <section id="qna">
         <p>test!</p>
 
       </section>
+      <section id="result">
+
+      </section>
+
       <script src="./js/start.js" charset="utf-8"></script>
     </div>
   </body>
